src/test/ui/traits/static-method-generic-inference.stderr
error[E0283]: type annotations needed
  --> $DIR/static-method-generic-inference.rs:24:25
   |
LL |     let _f: base::Foo = base::HasNew::new();
   |                         ^^^^^^^^^^^^^^^^^ cannot call trait method as a free function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
